--- a/Visual C# .NET/NegocioFlr/NegocioFlr.WebIU/Estilos/NegocioFlr.css
+++ b/Visual C# .NET/NegocioFlr/NegocioFlr.WebIU/Estilos/NegocioFlr.css
@@ -1,4 +1,9 @@
-﻿.pie_pagina
+﻿.cuerpo_fondo 
+{
+    background-color: #556B2F;
+}
+
+#pie_pagina
 {
     background-color: dodgerblue;
     position: absolute;
@@ -6,4 +11,4 @@
     width: 100%;
     height: 40px;
     color: white  
-} 
+}
