--- a/Visual C# .NET/NegocioFlr/NegocioFlr.WebIU/Paginas/Menu.Master
+++ b/Visual C# .NET/NegocioFlr/NegocioFlr.WebIU/Paginas/Menu.Master
@@ -5,61 +5,61 @@
 <html>
 <head runat="server">
     <title>Menú principal</title>
-    <script src="../Scripts/jquery-3.2.0.js"></script>
-    <script src="../Scripts/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <script src="../Scripts/jquery-3.5.1.js"></script>
+    <script src="../Scripts/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
     <script src="../Scripts/toastr.js"></script>
     <script src="../Scripts/toastr.min.js"></script>
     <script src="../Scripts/Utilerias.js"></script>
-    <link href="../Scripts/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../Scripts/bootstrap-4.5.0-dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../Estilos/toastr.css" rel="stylesheet" />
     <link href="../Estilos/NegocioFlr.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="cph_Encabezado" runat="server"></asp:ContentPlaceHolder>
 </head>
 <body class="body">
-    <br />
     <form id="pag_Menu" runat="server">
-        <div>
-            <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="Principal.aspx">
-                            <span>
-                                <img src="../Imagenes/Logo_Empresa.ico" alt="Logo" height="25" /></span><asp:Label ID="lbl_Cliente" runat="server" Text="&nbsp;Nombre del Cliente" ForeColor="White"></asp:Label>
-                        </a>
-                    </div>
-                    <div class="navbar-collapse collapse" style="background-color: dodgerblue">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="Principal.aspx" style="color: white">Inicio</a></li>
-                            <li><a href="Cat_Usuarios.aspx" style="color: white">Usuarios</a></li>
-                            <li>
-                                <asp:Button ID="btn_Logout" runat="server" Text="Cerrar Sesión" CssClass="btn btn-info" OnClick="btn_Logout_Click" />
-                            </li>
-                        </ul>
-                    </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-4" style="background-color: black">
+                    <table style="height: 100px">
+                        <tr style="align-content: center">
+                            <td>
+                                <asp:Image ID="img_Logo" runat="server" class="rounded" ImageUrl="~/Imagenes/Logo_Personal.ico" />
+                            </td>
+                            <td>
+                                <label id="lbl_Empresa" runat="server" style="color: white; font-style: normal; font-size: 12px"></label>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-sm-4" style="background-color: black;">
+                    <table style="height: 100px">
+                        <tr style="align-content: center">
+                            <td>
+                                <label id="lbl_Bienvenido" runat="server" style="color: white; font: bold; font-size: 25px"></label>
+                            </td>
+                        </tr>
+                        <tr style="align-content: center">
+                            <td>
+                                <label id="lbl_Informativo" runat="server" style="color: white; font: bold; font-size: 15px"></label>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-sm-4" style="background-color: black;">
+                    <ul class="nav  justify-content-end">
+                        <li class="nav-item"><a href="Principal.aspx" class="nav-link" style="color: white">Inicio</a></li>
+                        <li class="nav-item"><a href="Cat_Usuarios.aspx" class="nav-link" style="color: white">Usuarios</a></li>
+                        <li class="nav-item">
+                            <asp:Button ID="btn_Logout" runat="server" Text="Cerrar Sesión" CssClass="btn btn-secondary" OnClick="btn_Logout_Click" />
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <br />
+        <footer class="fixed-bottom" style="background-color: black;">
+            <center><label id="lbl_CP" runat="server" style="color: white; font: bold; font-size: 15px"></label></center>            
+        </footer>
         <asp:ContentPlaceHolder ID="cph_Cuerpo" runat="server"></asp:ContentPlaceHolder>
     </form>
-        
-    <div class="pie_pagina">
-        <footer>
-            <b><asp:Label ID="lbl_Vigencia" runat="server" Text="Días" CssClass="pull-right"></asp:Label></b>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <b><asp:Label ID="lbl_Informativo" runat="server" Text="Informativo" CssClass="pull-left"></asp:Label></b>
-            <asp:Label ID="lbl_Copyrigth" runat="server" Text="Anio" CssClass="text-center"></asp:Label>
-        </footer>
-    </div>
 </body>
 </html>
